Style fix for multiline code with scrollbar

--- a/frontend/app/styles/_hljs-line-numbers.scss
+++ b/frontend/app/styles/_hljs-line-numbers.scss
@@ -1,7 +1,6 @@
 .hljs-line-numbers {
     text-align: right;
-    border-right: 1px solid #ccc;
-    color: #999;
+    color: lighten($code-fg, 50%);
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
