--- a/frontend/app/styles/_variables.scss
+++ b/frontend/app/styles/_variables.scss
@@ -2,6 +2,7 @@
 
 $form-box-shadow-focus: $form-box-shadow;
 
+$code-fg: #000000;
 $code-bg: #F8F8F8;
 $spinner-color: #E1E1E1;
 $small-display: new-breakpoint(max-width 900px 12);
